--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
    
 
   <nav class="navbar navbar-default" role="navigation">
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-nav pull-right">
       <li>
         <%= link_to("Home", "#") %>
       </li>
