Update notebook context menu

--- a/app/assets/templates/notebook-sidebar.jst.ejs
+++ b/app/assets/templates/notebook-sidebar.jst.ejs
@@ -17,6 +17,23 @@
            Delete
         </a>
       </li>
+      <li>
+        <a role="menuitem"
+           data-action="rename"
+           data-id="<%= notebook.id %>"
+           tabindex="-1" href="#">
+           Rename
+        </a>
+      </li>
+      <li class="divider"></li>
+       <li>
+        <a role="menuitem"
+           data-action="close"
+           data-id="<%= notebook.id %>"
+           tabindex="-1" href="#">
+           Close
+        </a>
+      </li>
     </ul>
   <% }) %>
 </div>
