--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
         <%= link_to("Home", "#") %>
       </li>
       <li>
+        <%= link_to("Sign Up", new_user_url) %>
+      </li>
+      <li>
       <% if logged_in? %>
         <%= link_to("Sign Out", session_url, :method => :delete) %>
       <% else %>
