Add highlighting to selected memo

--- a/add_notebook.jst.ejs
+++ b/add_notebook.jst.ejs
@@ -9,4 +9,4 @@
          name="notebook[title]"
          placeholder="New Notebook">
 </div>
-<button type="submit" class="btn btn-primary">UTF+002B</button>
+<button type="submit" class="btn btn-primary btn-sm">UTF+002B</button>
