--- a/app/assets/templates/add_notebook.jst.ejs
+++ b/app/assets/templates/add_notebook.jst.ejs
@@ -9,7 +9,7 @@
            id="notebook_title" 
            placeholder="New Notebook">
   </div>
-  <button type="submit" class="btn btn-primary btn-add">Add</button>
+  <button type="submit" class="btn btn-primary btn-add btn-sm">Add</button>
 </form>
 <br/>
 <br/>
