--- a/app/assets/templates/editor/controls.jst.ejs
+++ b/app/assets/templates/editor/controls.jst.ejs
@@ -2,16 +2,16 @@
   <button id="memo-new" 
           type="button"
           <% if (isNewMemo) { %> disabled <% } %>
-          class="btn btn-primary">
+          class="btn btn-primary btn-sm">
           New
   </button>
 
   <button id="memo-trash" 
           type="button"
           <% if (isNewMemo) { %> disabled <% } %>
-          class="btn btn-danger">
+          class="btn btn-danger btn-sm">
           Trash
   </button>
-  <button id="memo-save" type="button" class="btn btn-warning">Save</button>
+  <button id="memo-save" type="button" class="btn btn-warning btn-sm">Save</button>
 </div>
 <br />
