--- a/app/assets/templates/memo_sidebar.jst.ejs
+++ b/app/assets/templates/memo_sidebar.jst.ejs
@@ -1,6 +1,8 @@
 <div class="list-group">
   <% memos.forEach(function (memo) { %>
-    <a href="#" class="list-group-item" data-id="<%= memo.id %>">
+    <a href="#" class="list-group-item memo-item" 
+                data-id="<%= memo.id %>" 
+                data-nb-id="<%= memos.notebookId %>">
       <h4 class="list-group-item-heading"><%= memo.get('title') %></h4>
       <p class="list-group-item-text"><%= memo.preview() %></p>
     </a>
