--- a/app/assets/templates/notebook-sidebar.jst.ejs
+++ b/app/assets/templates/notebook-sidebar.jst.ejs
@@ -1,6 +1,6 @@
 <div class="list-group">
   <% notebooks.forEach(function (notebook) { %>
-    <a href="#" class="list-group-item" data-id="<%= notebook.id %>">
+    <a href="#" class="list-group-item notebook-item" data-id="<%= notebook.id %>">
       <span class="listgroup-item-heading">
         <%= notebook.get('title') %>
       </span>
