Refactor routes, add tagging sidebar

--- a/app/assets/templates/editor/main.jst.ejs
+++ b/app/assets/templates/editor/main.jst.ejs
@@ -1,4 +1,8 @@
 <span>Last updated at: <%= memo.get('updated_at') %></span>
+<input type="hidden"
+      id="memo_notebook_id"
+      name="memo[notebook_id}"
+      value="<%= notebookId %>">
 
 
  
