--- a/app/assets/templates/memo_sidebar.jst.ejs
+++ b/app/assets/templates/memo_sidebar.jst.ejs
@@ -1,3 +1,4 @@
+<h3><%= notebookTitle %></h3>
 <div class="list-group">
   <% memos.forEach(function (memo) { %>
     <a href="#" class="list-group-item memo-item" 
