--- a/app/assets/templates/editor/controls.jst.ejs
+++ b/app/assets/templates/editor/controls.jst.ejs
@@ -3,6 +3,7 @@
           type="button"
           <% if (isNewMemo) { %> disabled <% } %>
           class="btn btn-primary btn-sm">
+          <span class="glyphicon glyphicon-file"></span>
           New
   </button>
 
@@ -10,8 +11,13 @@
           type="button"
           <% if (isNewMemo) { %> disabled <% } %>
           class="btn btn-danger btn-sm">
+          <span class="glyphicon glyphicon-trash"></span>
           Trash
   </button>
-  <button id="memo-save" type="button" class="btn btn-warning btn-sm">Save</button>
+  <button id="memo-save" type="button"
+          class="btn btn-warning btn-sm">
+          <span class="glyphicon glyphicon-floppy-disk"></span>
+          Save
+  </button>
 </div>
 <br />
