Update routes, add tag views, creation and deletion

--- a/app/assets/templates/memo_sidebar.jst.ejs
+++ b/app/assets/templates/memo_sidebar.jst.ejs
@@ -5,7 +5,7 @@
                 data-id="<%= memo.id %>" 
                 data-nb-id="<%= memos.notebookId %>">
       <h4 class="list-group-item-heading"><%= memo.get('title') %></h4>
-      <p class="list-group-item-text"><%= memo.preview() %></p>
+      <p class="list-group-item-text text-muted"><%= memo.preview() %></p>
     </a>
   <% }) %>
 </div>
