--- a/app/assets/templates/tag_list.jst.ejs
+++ b/app/assets/templates/tag_list.jst.ejs
@@ -1,7 +1,7 @@
 <h3>Tags</h3>
 <div class="list-group">
   <% tags.forEach(function (tag) { %>
-    <a href="#" data-id="<%= tag.id %>" class="list-group-item"> 
+    <a href="#" data-id="<%= tag.id %>" class="list-group-item tag-list-item"> 
       <span class="listgroup-item-heading">
         <span class="glyphicon glyphicon-tag"></span>
         <%= tag.get('name') %>
