--- a/app/assets/templates/tags/memo_tag_list.jst.ejs
+++ b/app/assets/templates/tags/memo_tag_list.jst.ejs
@@ -1,5 +1,6 @@
+
 <h4>Memo Tags</h4>
-<ul class="list-inline pull-left">
+<ul class="list-inline">
   <% tags.forEach(function (tag) { %>
     <li class="btn-group">
       <button type="button" 
