--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
    
 
   <nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-inner">
+      <a class="brand pull-left" href="<%= root_url %>"> 
+        <%= image_tag "/assets/memoboat_logo_reverse.png", size: "151x87" %>
+      </a>
+    
     <ul class="nav navbar-nav pull-right">
       <li>
         <%= link_to("Home", "#") %>
@@ -27,6 +32,7 @@
       <% end %> 
       </li>
     </ul>
+    </div>
   </nav>
 
    <% if flash[:errors] %>
