--- a/app/assets/templates/notebook-list.jst.ejs
+++ b/app/assets/templates/notebook-list.jst.ejs
@@ -9,8 +9,8 @@
       
 
       <span class="listgroup-item-heading">
-        <span class="glyphicon glyphicon-folder-close"</span>
-        <%= notebook.get('title') %>
+        <span class="glyphicon glyphicon-folder-close"></span>
+          <%= notebook.get('title') %>
       </span>
       <span data-id="<%= notebook.id %>" class="close pull-right">
         &times;
