--- a/app/assets/templates/tag_memo_form.jst.ejs
+++ b/app/assets/templates/tag_memo_form.jst.ejs
@@ -1,5 +1,5 @@
 
-<select multiple id="tag-name" name="tag[name]" class="form-control" type="text">
+<select multiple id="tag-name-select" name="tag[name]" class="form-control" type="text">
   <option>
     Select a tag
   </option>
