--- a/app/assets/templates/tags/add_tag_form.jst.ejs
+++ b/app/assets/templates/tags/add_tag_form.jst.ejs
@@ -1,3 +1,4 @@
+<form>
   <input type="text" class="form-control" id="new_tag_name" name="new_tag[name]">
-  <button type="submit" id="create-new-tag" class="btn btn-default">Add Tag</button>
-
+  <button type="submit" id="create-new-tag" class="btn btn-primary">New Tag</button>
+</form>
