Drag and drop tags

--- a/app/assets/templates/tag_list.jst.ejs
+++ b/app/assets/templates/tag_list.jst.ejs
@@ -2,7 +2,7 @@
 <div class="list-group">
   <% tags.forEach(function (tag) { %>
     <a href="#" data-id="<%= tag.id %>" class="list-group-item tag-list-item"> 
-      <span class="listgroup-item-heading">
+      <span class="listgroup-item-heading user-tag-item" data-id="<%= tag.id %>">
         <span class="glyphicon glyphicon-tag"></span>
         <%= tag.get('name') %>
       </span>
