Change tags draggable to anchor from span

--- a/app/assets/templates/tags/memo_tag_list.jst.ejs
+++ b/app/assets/templates/tags/memo_tag_list.jst.ejs
@@ -10,7 +10,7 @@
               data-id="<%= tag.id %>">
               &times;
       </button>
-      <button class="btn btn-default btn-xs" 
+      <button class="btn btn-default btn-xs memo-tag-btn" 
               data-id="<%= tag.id %>">
               <%= tag.get('name') %> 
       </button>
