--- a/app/assets/templates/tagged_memos.jst.ejs
+++ b/app/assets/templates/tagged_memos.jst.ejs
@@ -1,4 +1,4 @@
-<h3><%= tagTitle %></h3>
+<h3><span class="glyphicon glyphicon-tag"></span><%= tagTitle %></h3>
 <div class="list-group">
   <% memos.forEach(function (memo) { %>
     <a href="#" class="list-group-item memo-item" 
