--- a/app/assets/templates/tagged_memos.jst.ejs
+++ b/app/assets/templates/tagged_memos.jst.ejs
@@ -3,7 +3,7 @@
   <% memos.forEach(function (memo) { %>
     <a href="#" class="list-group-item memo-item" 
                 data-id="<%= memo.id %>" 
-                data-nb-id="<%= memos.notebookId %>">
+                data-nb-id="<%= memo.get('notebook_id') %>">
       <h4 class="list-group-item-heading"><%= memo.get('title') %></h4>
       <p class="list-group-item-text text-muted"><%= memo.preview() %></p>
     </a>
