--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     </ul>
 
     <a class="brand pull-left" href="<%= root_url %>"> 
-        <%= image_tag "/assets/memoboat_logo_reverse.png", size: "151x87" %>
+        <%= image_tag "/assets/memoboat_v2.png", size: "200x49" %>
       </a>
   </nav>
 
