Remove extraneous views

--- a/app/assets/templates/editor/title_input.jst.ejs
+++ b/app/assets/templates/editor/title_input.jst.ejs
@@ -8,6 +8,6 @@
            class="form-control" 
            id="memo_title" 
            name="memo[title]" 
-           placeholder="Enter Title"
+           placeholder="Just start typing..."
            value="<%= title_content %>">
 <br />
