--- a/app/assets/templates/tags/add_tag_form.jst.ejs
+++ b/app/assets/templates/tags/add_tag_form.jst.ejs
@@ -1,6 +1,5 @@
 <form>
-  <input type="text" 
-         class="form-control twitter-typeahead"
+  <input type="text" class="twitter-typeahead"
          id="add-tag-input"
          placeholder="+ Add Tag"
          name="new_tag[name]"
@@ -9,4 +8,3 @@
          <% } %>
          >
 </form>
-<br/>
