--- a/app/assets/templates/tags/memo_tag_list.jst.ejs
+++ b/app/assets/templates/tags/memo_tag_list.jst.ejs
@@ -1,18 +1,18 @@
 
-<ul class="list-inline">
+
     <li> 
-      <span class="glyphicon glyphicon-tags"></span>
+      <span class="glyphicon glyphicon-tags text-success"></span>
     </li>
 
   <% if (tags) { %>
     <% tags.forEach(function (tag) { %>
       <li class="btn-group">
         <button type="button" 
-                class="delete-tag btn btn-default btn-xs" 
+                class="delete-tag btn btn-success btn-xs" 
                 data-id="<%= tag.id %>">
                 &times;
         </button>
-        <button class="btn btn-default btn-xs memo-tag-btn" 
+        <button class="btn btn-success btn-xs memo-tag-btn" 
                 data-id="<%= tag.id %>">
                 <%= tag.get('name') %> 
         </button>
@@ -20,5 +20,3 @@
     <% }) %>
   <% } %>
 
-</ul>
-<br>
