--- a/app/assets/templates/time_data.jst.ejs
+++ b/app/assets/templates/time_data.jst.ejs
@@ -1,9 +1,9 @@
-<li class="text-primary">
+<li class="text-primary text-success">
   <span class="glyphicon glyphicon-time"></span>
   <em>Created <%= memoCreated %></em>
 </li>
 
-<li class="text-primary">
+<li class="text-primary text-success">
   <span class="glyphicon glyphicon-time"></span> 
   <em>Updated <%= memoUpdated %></em>
 </li>
