--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,9 +19,7 @@
 
 @import "paintstrap.min";
 
-body {
-  min-width: 900px;
-}
+
 
 #add-notebook-form input {
   width: 150px;
@@ -33,31 +31,52 @@ body {
   float: right;
 }
 
-.listgroup-item-heading, .list-group-item {
-  z-index: 500
+#add-tag-input {
+  padding: 2px 0 3px 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 120px;
+  height: 25px;
+  float: left;
+  font-size: 13px;
+  background-color: #ccc;
 }
 
-.ui-draggable-dragging {
-  z-index: 999
+
+#add-tag-input:focus {
+  outline: none;
 }
 
+body {
+  min-width: 900px;
+}
 
 .brand {
   margin: 10px 30px;
 }
 
 #change-memo-notebook {
-  margin-left: 150px;
-  width: 300px;
+  float: left;
 }
 
-#tag-controls ul li {
-  width: 250px;
+#editor {
+  margin-top: 55px;
+  min-height: 500px;
 }
 
+#editor-controls {
+  padding: 10px 0;
+  clear: both;
+  min-height: 50px;
+}
 
-#tag-controls ul li form{
-  width: 200px;
+#image-form {
+  margin-top: 10px;
+  clear: both;
+  float: left;
+}
+#memo-button-controls {
+ float: right;
 }
 
 .memo-item p.text-muted {
@@ -72,18 +91,50 @@ body {
   overflow: scroll
 }
 
-#editor {
-  margin-top: 55px;
-  min-height: 500px;
+ul#memo-tag-list {
+  margin: 20px 0;
+}
+
+#memo-tag-list li {
+  float: left;
+  margin: 5px 0;
+}
+
+#notebook-list {
+  max-height: 245px;
+  overflow: scroll;
+  margin-bottom: 10px; 
 }
 
 #notebook-sidebar {
   min-width: 250px;
 }
 
-#add-tag-input {
-  font-size: 13px;
-  margin-left: 2px;
+.listgroup-item-heading, .list-group-item {
+  z-index: 500
+}
+
+#tag-controls ul li {
+  width: 250px;
+}
+
+
+#tag-controls ul li form{
+  width: 200px;
+}
+
+#tag-list {
+  max-height: 260px;
+  overflow: scroll;
+}
+
+#time-data {
+  float: left;
+  clear: both;
+}
+
+.ui-draggable-dragging {
+  z-index: 999
 }
 
 
@@ -93,13 +144,13 @@ body {
   margin-bottom: 0px;
   margin-top: 0px;
   font-size: 13px;
-  padding-left: 14px;
+  padding-left: 3px;
   padding-right: 14px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   border-radius: 15px;
   width: 100%;
-  min-height: 30px;
+  min-height: 20px;
   display: block;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
