--- a/app/assets/templates/editor/controls.jst.ejs
+++ b/app/assets/templates/editor/controls.jst.ejs
@@ -1,4 +1,19 @@
-  <div id="memo-button-controls" class="pull-left">
+  <div id="change-memo-notebook">
+    <select id="memo-notebook-id" name="memo[notebook_id]" class="form-control">
+      <% notebooks.forEach(function (notebook) { %>
+        <option value="<%= notebook.id %>" 
+                
+                <% if (memoNotebookId == notebook.id) { %>
+                  selected="selected"
+                <% } %> 
+                >
+                <%= notebook.get('title') %>
+        </option>
+      <% }) %>
+    </select>
+  </div>
+
+  <div id="memo-button-controls">
     <button id="memo-new" 
             type="button"
             <% if (isNewMemo) { %> disabled <% } %>
@@ -20,25 +35,3 @@
             Save
     </button>
   </div>
-
-  <div id="change-memo-notebook" class="pull-left">
-    <label for="memo_notebook_id">Notebook</label>
-
-    <select id="memo-notebook-id" name="memo[notebook_id]" class="form-control">
-      <% notebooks.forEach(function (notebook) { %>
-        <option value="<%= notebook.id %>" 
-                
-                <% if (memoNotebookId == notebook.id) { %>
-                  selected="selected"
-                <% } %> 
-                >
-                <%= notebook.get('title') %>
-        </option>
-      <% }) %>
-    </select>
-  </div>
-  
-<br />
-<br />
-<br />
-
