--- a/app/assets/templates/editor/image_form.jst.ejs
+++ b/app/assets/templates/editor/image_form.jst.ejs
@@ -1,4 +1,4 @@
 <div class="form-group">
-  <label for="attachment">Attach image</label>
-  <input type="file" id="attachment">
+  <span id="attach-image-icon" class="glyphicon glyphicon-paperclip"></span>
+  <input type="file" id="attach-image">
 </div>
