--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,9 +47,14 @@
   outline: none;
 }
 
+#attach-image {
+  display: none
+}
+
 body {
   min-width: 900px;
 }
+
 
 .brand {
   margin: 10px 30px;
@@ -61,7 +66,7 @@ body {
 
 #editor {
   margin-top: 55px;
-  min-height: 500px;
+  height: 600px;
 }
 
 #editor-controls {
@@ -75,8 +80,36 @@ body {
   clear: both;
   float: left;
 }
+
+#memo_body {
+  max-height: 300px;
+  overflow: scroll;
+  outline: none;
+}
+
 #memo-button-controls {
  float: right;
+}
+
+.memo-item {
+  height: 130px;
+}
+
+.memo-item img {
+  margin-top: -40px;
+  display: inline;
+  float: right;
+}
+
+.memo-item p {
+  width: 65%;
+  clear: both;
+  float: left
+}
+
+.memo-item h4 {
+  display: inline;
+  float: left;
 }
 
 .memo-item p.text-muted {
@@ -84,6 +117,11 @@ body {
   padding-top: 10px;
   margin-top: 5px;
   font-size: 12px;
+}
+
+.memo-item p.text-success {
+  width: 50%;
+  float: left;
 }
 
 #memo-sidebar .list-group{
