--- a/app/assets/templates/editor/body_input.jst.ejs
+++ b/app/assets/templates/editor/body_input.jst.ejs
@@ -4,10 +4,11 @@
 
   <div id="memo_body"
        name="memo[body]"
-       contenteditable="true">
+       contenteditable="true"
+       data-ph="...to create a new memo.">
 
        <%= body_content %>
   </div>
-   <% if (memo.hasImage()) { %>
+   <% if ((!memo.isNew()) && memo.hasImage()) { %>
      <img src="<%= memo.get('image_big_url')%>" class="img-thumbnail">
    <% } %> 
