Add search box and memo list; auto-search; highlight

--- a/app/assets/templates/search_memos.jst.ejs
+++ b/app/assets/templates/search_memos.jst.ejs
@@ -1,4 +1,4 @@
-<h3><span class="glyphicon glyphicon-tag"></span> <%= tagTitle %></h3>
+<h3><span class="glyphicon glyphicon-search"></span> "<%= queryString %>"</h3>
 <div class="list-group">
   <% memos.forEach(function (memo) { %>
     <a href="#" class="list-group-item memo-item" 
