--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,12 @@
 
 @import "paintstrap.min";
 
-
+div.alert {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 99999
+}
 
 #add-notebook-form input {
   width: 150px;
@@ -71,6 +76,7 @@ h1, h2, h3, h4 {
 }
 
 
+
 .brand {
   margin: 10px 30px;
 }
@@ -86,7 +92,7 @@ h1, h2, h3, h4 {
 }
 
 #editor {
-  margin-top: 55px;
+  margin-top: 10px;
   height: 600px;
 }
 
@@ -94,6 +100,10 @@ h1, h2, h3, h4 {
   padding: 10px 0;
   clear: both;
   min-height: 50px;
+}
+
+.highlight {
+  background-color: #FFFF00
 }
 
 #image-form {
@@ -224,6 +234,25 @@ ul#memo-tag-list {
 
 #image-form:hover {
   cursor: pointer
+}
+
+
+#search-box {
+  font-size: 18px;
+  float: left;
+  margin-top: 60px;
+  padding: 3px 10px;
+  width: 100%;
+  border: none;
+  height: 40px
+}
+
+#search-box:focus {
+  outline: none;
+}
+
+#search-container {
+  padding: 0;
 }
 
 #tag-controls ul li {
