--- a/app/assets/templates/memo_sidebar.jst.ejs
+++ b/app/assets/templates/memo_sidebar.jst.ejs
@@ -1,7 +1,6 @@
 
 <h3>
-   <span class="glyphicon glyphicon-folder-open"></span>
-   <%= notebookTitle %>
+   <span class="glyphicon glyphicon-folder-open"></span>  <%= notebookTitle %>
 </h3>
 <div class="list-group">
   <% memos.forEach(function (memo) { %>
