--- a/app/assets/templates/search_memos.jst.ejs
+++ b/app/assets/templates/search_memos.jst.ejs
@@ -3,9 +3,33 @@
   <% memos.forEach(function (memo) { %>
     <a href="#" class="list-group-item memo-item" 
                 data-id="<%= memo.id %>" 
-                data-nb-id="<%= memo.get('notebook_id') %>">
-      <h4 class="list-group-item-heading"><%= memo.get('title') %></h4>
-      <p class="list-group-item-text text-muted"><%= memo.preview() %></p>
+                data-nb-id="<%= memos.notebookId %>">
+
+      <h4 class="list-group-item-heading">
+        <% if (memo.hasImage()) { %>
+          <%= memo.shortTitle() %>
+        <% } else { %>
+          <%= memo.get('title') %>
+        <% } %>
+      </h4>
+      <p class="list-group-item-text text-success">
+        <span class="glyphicon glyphicon-time"></span>
+        <%= moment(memo.get('updated_at')).fromNow() %>
+      </p>
+
+      <p class="list-group-item-text 
+               <% if (!memo.hasImage()) { %>
+                  max_size
+               <% } else { %>
+                  min_size
+               <% } %>
+               text-muted">
+        <%= memo.preview() %>
+      </p>
+
+      <% if (memo.hasImage()) { %>
+        <img src="<%= memo.get('image_small_url') %>">
+      <% } %>
     </a>
   <% }) %>
 </div>
