--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -93,7 +93,7 @@ h1, h2, h3, h4 {
 
 #editor {
   margin-top: 10px;
-  height: 600px;
+  height: 520px;
 }
 
 #editor-controls {
@@ -204,8 +204,12 @@ img.img-thumbnail {
   float: left;
 }
 
+#memo-sidebar {
+  height: 600px;
+}
+
 #memo-sidebar .list-group{
-  max-height: 500px;
+  max-height: 520px;
   overflow: scroll
 }
 
@@ -240,7 +244,7 @@ ul#memo-tag-list {
 #search-box {
   font-size: 18px;
   float: left;
-  margin-top: 60px;
+  margin-top: 10px;
   padding: 3px 10px;
   width: 100%;
   border: none;
