--- a/app/assets/templates/editor/body_input.jst.ejs
+++ b/app/assets/templates/editor/body_input.jst.ejs
@@ -2,13 +2,6 @@
 <%   var body_content = memo.get('body');  %>
 <% } %>
 
-  <div id="memo_body"
+  <textarea id="memo_body"
        name="memo[body]"
-       contenteditable="true"
-       data-ph="...to create a new memo.">
-
-       <%= body_content %>
-  </div>
-   <% if ((!memo.isNew()) && memo.hasImage()) { %>
-     <img src="<%= memo.get('image_big_url')%>" class="img-thumbnail">
-   <% } %> 
+       placeholder="...to create a new memo."><%= body_content %></textarea>
