Add minimum width

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,12 +62,10 @@ div.alert {
           border-radius: 0 !important;
 }
 
-body {
-  min-width: 900px;
-}
 
 body {
   font-family: Courier, serif;
+  width: 1430px;
 }
 
 h1, h2, h3, h4 {
